--- a/Task_5/index.html
+++ b/Task_5/index.html
@@ -150,7 +150,7 @@
                 return;
             }
 
-            const url = `http://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${city}&aqi=no`;
+            const url = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${city}&aqi=no`;
 
             try {
                 const response = await fetch(url);
